musl/issues/odbc.out
* installing to library '/home/runner/R-patched/lib'
* installing *source* package 'odbc' ...
** this is package 'odbc' version '1.6.3'
** package 'odbc' successfully unpacked and MD5 sums checked
** using staged installation
Found odbc_config cflags and libs!
PKG_CFLAGS=-DHAVE_UNISTD_H -DHAVE_PWD_H -DHAVE_SYS_TYPES_H -DHAVE_LONG_LONG -DSIZEOF_LONG_INT=8 -I/usr/include 
PKG_LIBS=-L/usr/lib -lodbc
** libs
using C++ compiler: 'g++ (Alpine 14.2.0) 14.2.0'
make[1]: Entering directory '/var/local/PKGS/CRAN/odbc/src'
(cd cctz && \
make libcctz.a CC="gcc -std=gnu23" CXX="g++ -std=gnu++17" CXXFLAGS="-O2 -mtune=native -Wno-ignored-attributes -DRCPP_DEMANGLER_ENABLED=0 " AR="ar" ARFLAGS=rcs CXXPICFLAGS="-fpic")
make[2]: Entering directory '/var/local/PKGS/CRAN/odbc/src/cctz'
g++ -std=gnu++17 -O2 -mtune=native -Wno-ignored-attributes -DRCPP_DEMANGLER_ENABLED=0  -Wall -Iinclude -std=c++11 -pthread  -O -fpic -MMD  -c -o time_zone_fixed.o src/time_zone_fixed.cc
g++ -std=gnu++17 -O2 -mtune=native -Wno-ignored-attributes -DRCPP_DEMANGLER_ENABLED=0  -Wall -Iinclude -std=c++11 -pthread  -O -fpic -MMD  -c -o time_zone_format.o src/time_zone_format.cc
g++ -std=gnu++17 -O2 -mtune=native -Wno-ignored-attributes -DRCPP_DEMANGLER_ENABLED=0  -Wall -Iinclude -std=c++11 -pthread  -O -fpic -MMD  -c -o time_zone_if.o src/time_zone_if.cc
g++ -std=gnu++17 -O2 -mtune=native -Wno-ignored-attributes -DRCPP_DEMANGLER_ENABLED=0  -Wall -Iinclude -std=c++11 -pthread  -O -fpic -MMD  -c -o time_zone_impl.o src/time_zone_impl.cc
g++ -std=gnu++17 -O2 -mtune=native -Wno-ignored-attributes -DRCPP_DEMANGLER_ENABLED=0  -Wall -Iinclude -std=c++11 -pthread  -O -fpic -MMD  -c -o time_zone_info.o src/time_zone_info.cc
src/time_zone_info.cc: In function 'char* cctz::{anonymous}::errmsg(int, char*, size_t)':
src/time_zone_info.cc:64:20: error: invalid conversion from 'int' to 'char*' [-fpermissive]
   64 |   return strerror_r(errnum, buf, buflen);
      |          ~~~~~~~~~~^~~~~~~~~~~~~~~~~~~~~
      |                    |
      |                    int
make[2]: *** [<builtin>: time_zone_info.o] Error 1
make[2]: Leaving directory '/var/local/PKGS/CRAN/odbc/src/cctz'
make[1]: *** [Makevars:20: cctz/libcctz.a] Error 2
make[1]: Leaving directory '/var/local/PKGS/CRAN/odbc/src'
make[1]: Entering directory '/var/local/PKGS/CRAN/odbc/src'
make[1]: Leaving directory '/var/local/PKGS/CRAN/odbc/src'
ERROR: compilation failed for package 'odbc'
* removing '/home/runner/R-patched/lib/odbc'
* restoring previous '/home/runner/R-patched/lib/odbc'
